--- a/webapps/templates/view_log.html
+++ b/webapps/templates/view_log.html
@@ -29,45 +29,47 @@
         clear: both;
     }
 
-    .scrollbar{
-	    /* margin-left: 30px; */
-	    float: left;
-	    height: 600px;
-	    width: 50%;
-	    /* background: #F5F5F5; */
-	    overflow-y: scroll;
-	    margin-bottom: 25px;
+    .scrollbar {
+        /* margin-left: 30px; */
+        float: left;
+        height: 600px;
+        width: 50%;
+        /* background: #F5F5F5; */
+        overflow-y: scroll;
+        margin-bottom: 25px;
     }
 
-    .scrollbar2{
-	    /* margin-left: 30px; */
-	    float: left;
-	    height: 600px;
-	    width: 100%;
-	    /* background: #F5F5F5; */
-	    overflow-y: scroll;
-	    margin-bottom: 25px;
+    .scrollbar2 {
+        /* margin-left: 30px; */
+        float: left;
+        height: 600px;
+        width: 100%;
+        /* background: #F5F5F5; */
+        overflow-y: scroll;
+        margin-bottom: 25px;
     }
-
 </style>
 <div class="row">
     <div class="col-md-1 text-center"><a href=".."><img src="{{ url_for('static', filename='images/ic-back.png') }}"
-        style="width:50px;height:50px;"></a></div>
+                style="width:50px;height:50px;"></a></div>
     <h4 class="col-md-2 form-group">
         <button type="button" class="btn btn-primary" id="sequence_logs" onclick="show_sl()" value="true">Sequence
             logs</button>
     </h4>
     <h4 class="col-md-2 form-group">
-        <button type="button" class="btn btn-outline-primary" id="raw_logs" onclick="show_rl()" value="false">Raw logs</button>
+        <button type="button" class="btn btn-outline-primary" id="raw_logs" onclick="show_rl()" value="false">Raw
+            logs</button>
     </h4>
 </div>
 <div class="row">
     <div class="col-md-1 text-center"></a></div>
     <h4 class="col-md-2 form-group">
-        <button type="button" class="btn btn-outline-primary" id="sequence_logs" onclick="download{{ filename + '.txt',sequence_logs }}" value="true">Download</button>
+        <button type="button" class="btn btn-outline-primary" id="sequence_logs"
+            onclick="download{{ filename + '.txt',sequence_logs }}" value="true">Download</button>
     </h4>
     <h4 class="col-md-2 form-group">
-        <button type="button" class="btn btn-outline-primary" id="raw_logs" onclick="download{{ filename + '.raw',raw_logs }}" value="false">Download</button>
+        <button type="button" class="btn btn-outline-primary" id="raw_logs"
+            onclick="download{{ filename + '.raw',raw_logs }}" value="false">Download</button>
     </h4>
 </div>
 <div class="row">
@@ -83,15 +85,17 @@
             <span>{{ line }}</span>
             {% endfor %}
         </pre>
-        <pre class="scrollbar hide both" style="white-space: pre-line; line-height: 1; background-color:#f5f5f5;">
-            <div class="force-overflow">
+        <pre class="scrollbar hide both sequenceLogs"
+            style="white-space: pre-line; line-height: 1; background-color:#f5f5f5;">
+            <div class=" force-overflow">
                 {% for line in sequence_logs %}
                 <span>{{ line }}</span>
                 {% endfor %}
             </div>
         </pre>
-        <pre class="scrollbar hide both" style="white-space: pre-line; line-height: 1; background-color:#e8e8e8;">
-            <div class="force-overflow">
+        <pre class="scrollbar hide both rawLogs"
+            style="white-space: pre-line; line-height: 1; background-color:#e8e8e8;">
+            <div class=" force-overflow">
                 {% for line in raw_logs %}
                 <span>{{ line }}</span>
                 {% endfor %}
@@ -108,10 +112,11 @@
 <script type="text/javascript">
 
     $(function () {
+
         var both = getCookie("show_logs");
         console.log(both)
 
-        switch(both) {
+        switch (both) {
             case "set_both":
                 set_both();
                 break;
@@ -126,8 +131,7 @@
                 break;
             default:
                 set_only_sequence();
-}
-
+        }
     });
 
     function download(filename, text) {
@@ -172,6 +176,10 @@
         $('#raw_logs').removeClass('btn-outline-primary');
         $('#raw_logs').addClass('btn-primary');
 
+        // textarea auto scroll to bottom by Warunchit B.
+        $('.sequenceLogs').scrollTop($('.sequenceLogs')[0].scrollHeight);
+        $('.rawLogs').scrollTop($('.rawLogs')[0].scrollHeight);
+
         setCookie("show_logs", "set_both", 365);
     }
 
@@ -184,13 +192,16 @@
 
         $('#sequence_logs').val('true');
         $('#sequence_logs').removeClass('btn-outline-primary');
-        $('#sequence_logs').addClass('btn-primary');
+        $('#sequence_logs').addClass('btn-primary')
 
         $('#raw_logs').val('false');
         $('#raw_logs').removeClass('btn-primary');
         $('#raw_logs').addClass('btn-outline-primary');
 
         setCookie("show_logs", "set_only_sequence", 365);
+
+        // textarea auto scroll to bottom by Warunchit B.
+        $('.only_sequence').scrollTop($('.only_sequence')[0].scrollHeight);
     }
 
     //show only raw logs
@@ -209,6 +220,9 @@
         $('#raw_logs').addClass('btn-primary');
 
         setCookie("show_logs", "set_only_raw", 365);
+
+        // textarea auto scroll to bottom by Warunchit B.
+        $('.only_raw').scrollTop($('.only_raw')[0].scrollHeight);
     }
 
     //do not show the lgos
@@ -240,7 +254,6 @@
                         set_only_raw();
                     }
                 });
-
             }
             else {
                 $.each($('#raw_logs'), function (key, value) {
