--- a/webapps/templates/base.html
+++ b/webapps/templates/base.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="utf-8" />
     <title>{% block title %}Robot Testing{% endblock %}</title>
-    <link href="Images/logo.ico" rel="ISS Icon" type="image/x-icon" />
+    <link href="{{ url_for('static', filename='images/logo.ico') }}" rel="ISS Icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
